@@ -3,6 +3,7 @@ plugins {
 	id 'org.jetbrains.kotlin.plugin.spring' version '2.3.20'
 	id 'org.springframework.boot' version '4.1.0-M4'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'com.google.cloud.tools.jib' version '3.5.3'
 }
 
 group = 'org.niikage'
@@ -41,7 +42,6 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'org.postgresql:r2dbc-postgresql'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -65,6 +65,23 @@ kotlin {
 	}
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+jib {
+	from {
+		image = "eclipse-temurin:25-jre-alpine"
+	}
+	to {
+		image = "ghcr.io/lifernod/planr"
+		tags = ["latest"]
+	}
+	container {
+		jvmFlags = [
+				"-XX:+UseZGC",
+				"-XX:+ZGenerational",
+				"-Xms256m",
+				"-Xmx512m",
+				"-Dspring.profiles.active=prod"
+		]
+		ports = ["8080"]
+		creationTime = "USE_CURRENT_TIMESTAMP"
+	}
 }
